# Basic_Programming_In_CPP

./: .gitignore  README.md
lesson-01/: tasks.md
lesson-01/1. Months/: 1. Months.cpp  1. Months.sln  1. Months.vcxproj
lesson-01/2. Accounts/: 2. Accounts.cpp  2. Accounts.sln  2. Accounts.vcxproj
lesson-01/3. Output structure/: 3. Output structure.cpp  3. Output structure.sln  3. Output structure.vcxproj
lesson-02/: task.md  tasks.md
lesson-02/1. Two numbers calculator/: 1. Two numbers calculator.cpp  1. Two numbers calculator.sln  1. Two numbers calculator.vcxproj  Caclulator.cpp  Calculator.h  FromUser.cpp  FromUser.h  main.cpp  task.md
lesson-02/2. Counter/: 2. Counter.cpp  2. Counter.sln  2. Counter.vcxproj
lesson-03/: tasks.md
lesson-03/1. Address/: 1. Address.sln  1. Address.vcxproj  Address.cpp  Address.h  AddressBook.cpp  AddressBook.h  in.txt  main.cpp  out.txt
lesson-03/2. Address sorting/: 2. Address sorting.sln  2. Address sorting.vcxproj  Address.cpp  Address.h  AddressBook.cpp  AddressBook.h  in.txt  main.cpp  out.txt
lesson-04/: tasks.md
lesson-04/1_FiguresNumberOfSides/: CMakeLists.txt  main.cpp  shapes.cpp  shapes.h
lesson-04/2_FiguresSidesAndCorners/: CMakeLists.txt  figure.cpp  figure.h  main.cpp  quadrangle.cpp  quadrangle.h  triangle.cpp  triangle.h
lesson-04/3_Shapes_Methods/: CMakeLists.txt  figure.cpp  figure.h  main.cpp  quadrangle.cpp  quadrangle.h  triangle.cpp  triangle.h
lesson-05/: tasks.md
lesson-05/1_MathematicalFunctions/: 1_MathematicalFunctions.sln  1_MathematicalFunctions.vcxproj  fromuser.cpp  fromuser.h  main.cpp  math.cpp  math.h
lesson-05/2_Counter/: 2_Counter.sln  2_Counter.vcxproj  counter.cpp  counter.h  fromUser.cpp  fromUser.h  main.cpp
lesson-05/3_Class_Hierarchy/: 3_Class_Hierarchy.sln  3_Class_Hierarchy.vcxproj  equilateralTriangle.cpp  equilateralTriangle.h  isoscelesTriangle.h  main.cpp  quadrangle.cpp  quadrangle.h  rectangle.cpp  rhombus.cpp  rightTriangle.cpp  rightTriangle.h  square.cpp  square.h  triangle.cpp  triangle.h
lesson-06/: tasks.md
lesson-06/1_PreprocessorDirectives/: CMakeLists.txt  main.cpp
lesson-06/2_MacrosSUB/: CMakeLists.txt  main.cpp
lesson-07/: tasks.md
lesson-07/1_Simple_Exception/: CMakeLists.txt  main.cpp
lesson-07/2_Exceptions_In_Constructors/: CMakeLists.txt  createShapes.cpp  createShapes.h  equilateralTriangle.cpp  equilateralTriangle.h  figure.cpp  figure.h  geometryException.h  isoscelesTriangle.cpp  isoscelesTriangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  rightTriangle.cpp  rightTriangle.h  square.cpp  square.h  triangle.cpp  triangle.h
lesson-08/: tasks.md
lesson-08/1_Comparisons_In_Frations/: CMakeLists.txt  main.cpp
lesson-08/2_Other_Operations_With_Fractions/: CMakeLists.txt  main.cpp
lesson-09/: tasks.md
lesson-09/1_The_Simpleset_Project_CMake/: CMakeLists.txt  main.cpp
lesson-09/2_Class_Hierarchy/src/: CMakeLists.txt  figure.h  isoscelesTriangle.cpp  main.cpp  parallelogram.cpp  parallelogram.h  rectangle.h  rhombus.h
lesson-1/1. Months/: 1. Months.cpp
lesson-1/2. Accounts/: 2. Accounts.cpp
lesson-1/3. Output structure/: 3. Output structure.cpp
lesson-10/: tasks.md
lesson-10/1-2_Greetings_and_Farewells/Farewell/: Farewell.vcxproj  Leaver.h
lesson-10/1-2_Greetings_and_Farewells/Greeting/: Greeter.cpp  Greeting.vcxproj
lesson-10/1-2_Greetings_and_Farewells/GreetingAndFarewell/: GreetingAndFarewell.cpp  GreetingAndFarewell.sln  GreetingAndFarewell.vcxproj
lesson-10/1_StaticLibrary/GreeterLib/: GreeterLib.sln
lesson-10/1_StaticLibrary/GreeterLib/GreeterLib/: Greeter.h  GreeterLib.vcxproj
lesson-10/1_StaticLibrary/StaticLibrary/: StaticLibrary.cpp  StaticLibrary.vcxproj
lesson-10/2_DynamicLibrary/DynamicLibrary/: DynamicLibrary.sln
lesson-10/2_DynamicLibrary/DynamicLibrary/DynamicLibrary/: DynamicLibrary.cpp  DynamicLibrary.vcxproj
lesson-10/2_DynamicLibrary/lib/: lib.sln
lesson-10/2_DynamicLibrary/lib/DynamicLibrary/: DynamicLibrary.cpp  DynamicLibrary.vcxproj
lesson-10/2_DynamicLibrary/lib/lib/: Leaver.cpp  Leaver.h  lib.vcxproj
lesson-10/3_DynamicLibrary_cmake/: CMakeLists.txt  main.cpp
lesson-10/3_DynamicLibrary_cmake/include/: Leaver.h
lesson-10/3_DynamicLibrary_cmake/src/: Leaver.cpp
lesson-10/4_Class_hierarchy_in_DLLs/FIgureLib/: FIgureLib.sln
lesson-10/4_Class_hierarchy_in_DLLs/FIgureLib/FIgureLib/: FIgureLib.vcxproj
lesson-10/4_Class_hierarchy_in_DLLs/FigureLib/: Figure.cpp  Figure.h  FigureLib.vcxproj
lesson-10/4_Class_hierarchy_in_DLLs/Figures/: Figures.cpp  Figures.sln  Figures.vcxproj
lesson-10/4_Class_hierarchy_in_DLLs/QuadrangleLib/: Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  QuadrangleLib.vcxproj  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h
lesson-10/4_Class_hierarchy_in_DLLs/TriangleLib/: EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  RightTriangle.cpp  RightTriangle.h  Triangle.cpp  Triangle.h  TriangleLib.vcxproj
lesson-10/5_Class_hierarchy_in_DLLs_CMake/: CMakeLists.txt
lesson-10/5_Class_hierarchy_in_DLLs_CMake/include/: EquilateralTriangle.h  Figure.h  RightTriangle.h
lesson-10/5_Class_hierarchy_in_DLLs_CMake/src/: Rectangle.cpp  Triangle.cpp
lesson-10/5_Figures/: CMakeLists.txt  Figures.cpp
lesson-10/5_Figures/Figure/: CMakeLists.txt
lesson-10/5_Figures/Figure/src/: Figure.cpp
lesson-10/5_Figures/Quadrangles/: CMakeLists.txt
lesson-10/5_Figures/Quadrangles/include/: Parallelogram.h  Quadrangle.h  Rectangle.h  Rhombus.h  Square.h
lesson-10/5_Figures/Quadrangles/src/: Parallelogram.cpp  Quadrangle.cpp  Rhombus.cpp  Square.cpp
lesson-10/5_Figures/Shapes/: CMakeLists.txt
lesson-10/5_Figures/Shapes/src/: Figures.cpp
lesson-10/5_Figures/Triangles/: CMakeLists.txt
lesson-10/5_Figures/Triangles/include/: IsoscelesTriangle.h  Triangle.h
lesson-10/5_Figures/Triangles/src/: EquilateralTriangle.cpp  IsoscelesTriangle.cpp  RightTriangle.cpp
